--- a/systemd/market-collector.service
+++ b/systemd/market-collector.service
@@ -6,7 +6,7 @@ Requires=docker.service
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/docker start market-collector || /usr/bin/docker run -d --name market-collector --restart unless-stopped -e DATABASE_URL=${DATABASE_URL} market-collector:latest
+ExecStart=/usr/bin/docker start market-collector || /usr/bin/docker run -d --name market-collector --restart unless-stopped -e DATABASE_URL=${DATABASE_URL} -p 8282:8080 market-collector:latest
 ExecStop=/usr/bin/docker stop market-collector
 
 [Install]
