--- a/.market_collector_env.example
+++ b/.market_collector_env.example
@@ -9,5 +9,12 @@
 GITHUB_PAT=ghp_xxx
 DB_CONN='postgresql+psycopg2://user:pass@host:5432/db'
 
+# API token used to protect control endpoints (set in container/env). Example only.
+# If empty, auth is disabled.
+API_TOKEN=example-token-CHANGE_ME
+
+# Optional log file path used by the built-in dashboard
+LOG_FILE=/var/log/market-collector.log
+
 # Example usage (after copying and editing):
 #   ./scripts/setup_ubuntu.sh
