--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -1,5 +1,4 @@
-version: '3.8'
-
+services:
 services:
   web:
     build: .
@@ -9,7 +8,6 @@ services:
       - db
       - redis
     ports:
-      - "8000:8000"
       - "8383:8000"
     command: uvicorn app.system.health:app --host 0.0.0.0 --port 8000
     volumes:
